--- a/payments-service/src/main/resources/messages_pl_PL.properties
+++ b/payments-service/src/main/resources/messages_pl_PL.properties
@@ -1,1 +1,2 @@
-PaymentNotFoundException=Płatność nie istnieje
+PaymentNotFoundException=P\u0142atno\u015B\u0107 nie istnieje
+MethodArgumentNotValidException=B\u0142\u0119dne dane
